Documentation edits made through Mintlify web editor

--- a/Mayo-Ozeki_Mintlify-assignment.mdx
+++ b/Mayo-Ozeki_Mintlify-assignment.mdx
@@ -79,7 +79,7 @@ By this step I should have a good understanding of how things are running, set u
   - Aiming for our MQL/SQL/conversion goals and demo requests for the quarter
   - Brand awareness and engagement
 
-## **Possible campaigns and potential pain points (60-day mark)**
+## **Possible campaigns and pain points (60-day mark)**
 
 Upon figuring out what our goals are, we can move forward with some campaigns where I’ve seen some success in. 
 
@@ -97,6 +97,7 @@ Although webinars have taken off in the tech scene, podcasts have also seen some
 
 This is an email campaign lasting 6-8 weeks where we compile a list of accounts/leads that ended up as closed losses or disqualified due to poor timing in the past 6 months and send a weekly email while offering a small gift in return for their time. It's essentially a list of folks who were interested enough to reach out to engage with us to being with but just didn't end up working out. Sometimes these folks just need a little extra push to get there\! By re-engaging with these folks we can truly see if they were "closed losses" or not. We can provide a playbook for the sales team so they'll be able to respond when/if they do reach out to us.
 
-### **Potential pain point**
+### **Pain points**
 
-I believe some of the hardest part of closing deals is when the product users and contract signers are different. I've seen many instances where the users loved the product, but the signer didn't want to provide the budget for it. Or poor communication from the user end, leaving us in the dust without being able to loop in the contract signer. Luckily, in most cases, it seems like the users feel our pain just as much. By keeping that in mind while we work on the messaging of our campaigns, we can get one step closer to getting a hold of the contract signers even sooner than we usually do. 
+- I believe one of the hardest parts of closing deals are when the product users and contract signers are different. I've seen many instances where the users loved the product, but the signer didn't want to provide the budget for it. Or poor communication from the user end, leaving us in the dust without being able to loop in the contract signer. Luckily, in most cases, it seems like the users feel our pain just as much. By keeping that in mind while we work on the messaging of our campaigns, we can get one step closer to getting a hold of the contract signers even sooner than we usually do. 
+- For a small startup team, taking on a project like webinars and podcasts can be a huge lift. Everyone is already taking on so much on their plate and it can feel near impossible setting aside a time to brainstorm, discuss, and even create slide decks. It can be a very streamlined process once we get it in place but it will definitely be a huge lift from all stakeholders leading up to that point.
